--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
         <section class="sec-1-container">
             <div>
                 <h1 class="title">Start your journey as photographer</h1>
-                <p>A great photograph is one that fully expresses what one feels in the deepest sense,about what is
+                <p class="para">A great photograph is one that fully expresses what one feels in the deepest sense,about
+                    what is
                     being photographed.</p>
                 <button class="btn-1">My Photography <i class="fa-solid fa-arrow-right"></i></button>
             </div>
