--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
         <!----------------------------------- section-2 ------------------------->
         <section class="sec-2-container">
             <div>
-                <img src="logos/Alibaba.svg" alt="">
-                <img src="logos/Amazon.svg" alt="">
-                <img src="logos/Daraz.pk Logo.svg" alt="">
-                <img src="logos/Ebay.svg" alt="">
-                <img src="logos/Rakuten.svg" alt="">
-                <img src="logos/Target.svg" alt="">
-                <img src="logos/Walmart.svg" alt="">
+                <img class="greed" src="logos/Amazon.svg" alt="">
+                <img class="greed" src="logos/Alibaba.svg" alt="">
+                <img class="greed" src="logos/Daraz.pk Logo.svg" alt="">
+                <img class="greed" src="logos/Ebay.svg" alt="">
+                <img class="greed" src="logos/Rakuten.svg" alt="">
+                <img class="greed" src="logos/Target.svg" alt="">
+                <img class="greed" src="logos/Walmart.svg" alt="">
             </div>
         </section>
         <!-------------------------------- end section-2 ------------------------------->
