--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
         <!----------------------------------- section-1 ----------------------------->
         <section class="sec-1-container">
             <div>
-                <h1 class="title">Start your journey as photographer</h1>
-                <p class="para">A great photograph is one that fully expresses what one feels in the deepest sense,about
+                <h1 class="sec-1-h1">Start your journey as photographer</h1>
+                <p class="sec-1-para">A great photograph is one that fully expresses what one feels in the deepest
+                    sense,about
                     what is
                     being photographed.</p>
-                <button class="btn-1">My Photography <i class="fa-solid fa-arrow-right"></i></button>
+                <button class="sec-1-btn">My Photography <i class="fa-solid fa-arrow-right"></i></button>
             </div>
             <div>
                 <img src="images/main-camera.png" alt="">
@@ -53,22 +54,22 @@
         <!----------------------------------- section-2 ------------------------->
         <section class="sec-2-container">
             <div>
-                <img class="greed" src="logos/Amazon.svg" alt="">
-                <img class="greed" src="logos/Alibaba.svg" alt="">
-                <img class="greed" src="logos/Daraz.pk Logo.svg" alt="">
-                <img class="greed" src="logos/Ebay.svg" alt="">
-                <img class="greed" src="logos/Rakuten.svg" alt="">
-                <img class="greed" src="logos/Target.svg" alt="">
-                <img class="greed" src="logos/Walmart.svg" alt="">
+                <img src="logos/Amazon.svg" alt="">
+                <img src="logos/Alibaba.svg" alt="">
+                <img src="logos/Daraz.pk Logo.svg" alt="">
+                <img src="logos/Ebay.svg" alt="">
+                <img src="logos/Rakuten.svg" alt="">
+                <img src="logos/Target.svg" alt="">
+                <img src="logos/Walmart.svg" alt="">
             </div>
         </section>
         <!-------------------------------- end section-2 ------------------------------->
 
 
         <!------------------------------------ section-3 ---------------------------------->
-        <section class="container">
-            <h2 class="center-align">Popular Collection</h2>
-            <main class="grid-section">
+        <section class="sec-3-container">
+            <h2 class="sec-3-h2">Popular Collection</h2>
+            <main class="sec-3-grid">
 
                 <div class="collection">
                     <div class="collection-image">
@@ -380,15 +381,15 @@
                     content with silence...
                     In photography there is a reality so subtle that it becomes more real than reality.
                 </p>
-                <button class="btn-1">Join Unsplash <i class="fa-solid fa-arrow-right"></i></button>
+                <button class="sec-4-btn">Join Unsplash <i class="fa-solid fa-arrow-right"></i></button>
             </div>
         </section>
         <!-- ------------------------------------------End section-4 ---------------------------------------------- -->
     </main>
     <!-------------------------------------------- footer------------------------------------------------- -->
-    <div class="sec-5 ">
+    <div class="sec-5-container">
 
-        <div class="sec-5-center">
+        <div class="sec-5-align">
             <h1>Influencer Products</h1>
             <p>Copyright © 2022 influencer products</p>
             <p>All rights reserved</p>
