--- a/index.html
+++ b/index.html
@@ -19,16 +19,25 @@
     <main class="margin-article">
         <!---------------------------------------- header -------------------------------->
         <header>
+            <ul class="bar-icon">
+                <li><a href=""><i class="fa-solid fa-bars"></i></a></li>
+            </ul>
             <div>
                 <h2>Influencer Products</h2>
             </div>
-            <div class="menu-bar">
-                <li><a href="">Home</a></li>
-                <li><a href="">Products</a></li>
-                <li><a href="">Sign up</a></li>
-                <li><a href="">Log in</a></li>
-                <li><a href=""><i class="fa-solid fa-magnifying-glass"></i></a></li>
+            <ul class="bar-icon">
                 <li><a href=""><i class="fa-solid fa-cart-shopping"></i></a></li>
+            </ul>
+            <div>
+                <ul class="menu-bar">
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Products</a></li>
+                    <li><a href="">Sign up</a></li>
+                    <li><a href="">Log in</a></li>
+                    <li><a href=""><i class="fa-solid fa-magnifying-glass"></i></a></li>
+                    <li><a href=""><i class="fa-solid fa-cart-shopping"></i></a></li>
+                </ul>
+
             </div>
         </header>
         <!------------------------------------ end header ------------------------------------------->
