--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         <!----------------------------------- section-1 ----------------------------->
         <section class="sec-1-container">
-            <div>
+            <div class="device-view">
                 <h1 class="sec-1-h1">Start your journey as photographer</h1>
                 <p class="sec-1-para">A great photograph is one that fully expresses what one feels in the deepest
                     sense,about
