--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
         <!----------------------------------- section-2 ------------------------->
         <section class="sec-2-container">
-            <div>
+            <div class="sec-2-device-views">
                 <img src="logos/Amazon.svg" alt="">
                 <img src="logos/Alibaba.svg" alt="">
                 <img src="logos/Daraz.pk Logo.svg" alt="">
